public/stylesheets/pmrs.css
#top {
    position : fixed;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 150px;
    background-color : #8f8f8f;
    overflow: auto;
}

#top div {
    padding-left: 1em;
}

#left-tab {
    position : fixed;
    top: 150px;
    left: 0px;
    width: 2em;
    bottom: 0px;
    background-color : #c0c0c0;
    overflow: auto;
}

#left-tab div {
    text-align: center;
}

#left {
    position : fixed;
    top: 150px;
    left: 2em;
    width: 20em;
    bottom: 0px;
    background-color : #c0c0c0;
    overflow: auto;
}

#right-tab {
    position : fixed;
    top: 150px;
    right: 0px;
    width: 2em;
    bottom: 0px;
    background-color : #c0c0c0;
    overflow: auto;
}

#right-tab div {
    text-align: center;
}

#right {
    position : fixed;
    top: 150px;
    right: 2em;
    width: 8em;
    bottom: 0px;
    background-color : #c0c0c0;
    overflow: auto;
}

#right div {
    margin-left: 1em;
}

#center {
    position: absolute;
    top: 150px;
    left: 2em;
    right: 2em;
    bottom: 0px;
    overflow: auto;
    font-family: courier, monospace;
}

#center div {
    padding-left: 0.5em;
}

body {
    background-color: #f8f8f8;
}

.signature {
    color: blue;
}

.system {
    color: green;
}

.normal-protected {
    color: white;
}

.normal-unprotected {
    color: pink;
}

.intensified-protected {
    color: orange;
}

.intensified-unprotected {
    color: tan;
}

.even {
    background-color: Salmon;
}

.odd {
    background-color: SandyBrown;
}

#click-header {
    color: gold;
}

.click-tag {
    text-decoration: underline;
    cursor: pointer;
}

.field-header {
    font-weight: bold;
}

.field-center {
    position: absolute;
    left: 0px;
    right: 0px;
    text-align: center;
    z-index: -1;
}

.field-left {
    position: absolute;
    left: 1em;
}

.field-right {
    position: absolute;
    right: 1em;
}

#pbc {
    font-weight: bold;
    font-size: larger;
}

#line1 {
    position: relative;
    top: 0em;
}

#line2 {
    position: relative;
    top: 1.3em;
}

#line3 {
    position: relative;
    top: 2.6em;
}

#line4 {
    position: relative;
    top: 3.9em;
}

